@@ -1,3 +1,8 @@
+2018-09-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR debug/86593
+	* g++.dg/pr86593.C: New test.
+
 2018-09-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/87198
